# asdf-wcs-schemas

./: .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CHANGES.rst  CODE_OF_CONDUCT.md  CONTRIBUTING.rst  LICENSE  README.md  bandit.yaml  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: changelog.yml  ci.yml  publish-to-pypi.yml
docs/: conf.py  frames.rst  index.rst  legacy.rst  manifests.rst  transforms.rst  wcs.rst
docs/_static/: custom.css
docs/asdf-wcs-schemas/schemas/: index.rst
resources/manifests/: gwcs-1.0.0.yaml  gwcs-1.1.0.yaml  gwcs-1.3.0.yaml  gwcs-1.4.0.yaml  gwcs-schemas-1.0.yaml
resources/manifests/wcs/: wcs-1.0.0.yaml  wcs-1.1.0.yaml  wcs-1.2.0.yaml  wcs-1.3.0.yaml
resources/schemas/stsci.edu/gwcs/: celestial_frame-1.0.0.yaml  celestial_frame-1.1.0.yaml  celestial_frame-1.2.0.yaml  composite_frame-1.0.0.yaml  direction_cosines-1.0.0.yaml  direction_cosines-1.1.0.yaml  direction_cosines-1.3.0.yaml  discrete_frame-1.0.0.yaml  fitswcs_imaging-1.0.0.yaml  frame-1.0.0.yaml  frame-1.2.0.yaml  frame2d-1.0.0.yaml  frame2d-1.1.0.yaml  frame2d-1.2.0.yaml  grating_equation-1.0.0.yaml  grating_equation-1.1.0.yaml  grating_equation-1.3.0.yaml  label_mapper-1.0.0.yaml  label_mapper-1.1.0.yaml  label_mapper-1.2.0.yaml  label_mapper-1.3.0.yaml  regions_selector-1.0.0.yaml  regions_selector-1.1.0.yaml  regions_selector-1.3.0.yaml  sellmeier_glass-1.0.0.yaml  sellmeier_glass-1.1.0.yaml  sellmeier_glass-1.2.0.yaml  sellmeier_glass-1.3.0.yaml  sellmeier_zemax-1.0.0.yaml  sellmeier_zemax-1.1.0.yaml  sellmeier_zemax-1.3.0.yaml  snell3d-1.0.0.yaml  snell3d-1.1.0.yaml  snell3d-1.2.0.yaml  snell3d-1.3.0.yaml  spectral_frame-1.0.0.yaml  spectral_frame-1.2.0.yaml  spherical_cartesian-1.0.0.yaml  spherical_cartesian-1.1.0.yaml  spherical_cartesian-1.2.0.yaml  (+13 more)
src/asdf_wcs_schemas/: _version.py  integration.py
tests/: conftest.py  test_integration.py  test_manifest.py  test_schemas.py
