[project]
name = 'asdf_wcs_schemas'
description = 'ASDF WCS schemas'
readme = 'README.md'
requires-python = '>=3.9'
license-files = ['LICENSE']
authors = [{ name = 'The ASDF Developers', email = 'help@stsci.edu' }]
classifiers = [
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Development Status :: 5 - Production/Stable',
]
dependencies = [
    'asdf-standard >= 1.1.0',
    'asdf-transform-schemas >= 0.6.0',
    'asdf-coordinates-schemas >= 0.4.0',
]
dynamic = ['version']

[build-system]
requires = [
    "setuptools>77",
    "setuptools_scm[toml]>=3.4",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
docs = [
    'tomli',
    'sphinx',
    'sphinx-asdf >= 0.1.3',
    'sphinx-astropy',
    'astropy >= 5.0.4',
    'graphviz',
    'matplotlib',
    'docutils',
    'furo',
]
test = [
    'pytest >= 4.6.0',
    'asdf >= 2.8.0',
    'asdf-astropy',
]

[project.urls]
'tracker' = 'https://github.com/asdf-format/asdf-wcs-schemas/issues'
'documentation' = 'https://www.asdf-format.org/projects/asdf-wcs-schemas/en/latest'
'repository' = 'https://github.com/asdf-format/asdf-wcs-schemas'

[project.entry-points]
'asdf.resource_mappings' = { asdf_wcs_schemas = 'asdf_wcs_schemas.integration:get_resource_mappings' }

[tool.setuptools_scm]
write_to = "src/asdf_wcs_schemas/_version.py"

[tool.setuptools]
packages = ["asdf_wcs_schemas", "asdf_wcs_schemas.resources"]

[tool.setuptools.package-data]
"asdf_wcs_schemas.resources" = ["resources/**/*.yaml"]

[tool.setuptools.package-dir]
'' = "src"
"asdf_wcs_schemas.resources" = "resources"

[tool.pytest.ini_options]
asdf_schema_root = 'resources/schemas'
asdf_schema_tests_enabled = 'true'
asdf_schema_ignore_unrecognized_tag = 'true'
testpaths = """
    tests
    resources
"""
addopts = '--color=yes'

[tool.black]
line-length = 120
force-exclude = '''
^/(
  (
      \.eggs
    | \.git
    | \.pytest_cache
    | \.tox
    | build
    | dist
  )/
)
'''

[tool.isort]
profile = "black"
filter_files = true
line_length = 120
