[metadata]
name = asdf_wcs_schemas
description = ASDF WCS Schemas
long_description = file: README.md
long_description_content_type = text/markdown
author = STScI
license = BSD-3-Clause
url = https://github.com/spacetelescope/asdf-wcs-schemas
project_urls =
    Bug Tracker = https://github.com/spacetelescope/asdf-wcs-schemas/issues
    Source Code = https://github.com/spacetelescope/asdf-wcs-schemas
classifiers =
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Astronomy
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
edit_on_github = False

[options]
python_requires = >=3.6
zip_safe = true
setup_requires =
    setuptools
    setuptools_scm
install_requires =
    asdf>=2.8.0
    importlib_resources>=3;python_version<"3.9"

[options.extras_require]
docs =
    sphinx
    sphinx-automodapi
    sphinx-rtd-theme
    stsci-rtd-theme
    sphinx-astropy
    sphinx-asdf

test =
    pytest>=4.6.0
    pytest-openfiles>=0.5.0

[options.entry_points]
asdf.resource_mappings =
    asdf_wcs_schemas = asdf_wcs_schemas.integration:get_resource_mappings

[tool:pytest]
asdf_schema_root = resources/schemas
# disable schema tests until a bug in asdf pytest plugin is fixed
# currently these tests would fail because they try to load schemas
# from asdf package.
asdf_schema_tests_enabled = false
asdf_schema_ignore_unrecognized_tag = true
testpaths =
    tests
    resources

[flake8]
exclude = .git, __pycache__, build, dist, eggs, *.egg, .tox
max-line-length = 130
ignore = E501, E203, W503, W504, W605, E741
